--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^12.8.3",
     "emailjs-com": "^3.2.0",
     "google-map-react": "^2.1.10",
+    "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-datepicker": "^4.2.1",
     "react-dom": "^17.0.2",
