--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,4 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 # "build": "react-scripts build",
+#"build": "react-scripts --openssl-legacy-provider build",
